# UShareIPlay

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  appium.sh  config.local.yaml.example  config.yaml  main.py  pyproject.toml  requirements.txt  run.sh  test_avatar_exit.py  test_chat_logger.py  test_command_parser_no_config_mutation.py  test_singleton.py  test_timer_restart.py  test_user_canonical_mapping.py
.claude/: ecc-tools.json  identity.json  settings.json  settings.local.json
.codex/: AGENTS.md
agent/: capabilities.json  event_taxonomy.md  known_issues.md  preconditions.md  questions.md
config/: cheatsheat.txt  commands.yaml  keywords.yaml.example
docs/: command-architecture-principles.md  config.md  lazy-initialization-guide.md  logging-configuration.md  logging-troubleshooting.md  manager-architecture.md  music.md  party-restart-feature.md  room.md  system.md  theme-command.md  theme-title-logic-fix.md  timers.md  title-manager.md  users.md
scripts/: agent_e2e.py
tests/: conftest.py  test_accidental_touch_locker_event.py  test_agent_e2e_coordination.py  test_agent_e2e_runner_lifecycle.py  test_agent_observability_smoke.py  test_app_controller_driver_subscribers.py  test_app_handler_ui_delegates.py  test_avatar_exit.py  test_base_command_wrapper.py  test_chat_intake.py  test_chat_room_title_runtime_context.py  test_command_execution_interface.py  test_command_manager_class_loading.py  test_command_manager_no_legacy_factory.py  test_command_manager_runtime_context.py  test_command_manager_silent_commands.py  test_db_manager.py  (+47 more)
(+357 files in other folders)
